syntax = "proto3";

package colonio.api.map_api;

import "core/core.proto";

message Get {
  core.Value key  = 1;
}

message GetReply {
  core.Value value  = 1;
}

message Set {
  core.Value key = 1;
  core.Value value = 2;
  uint32 opt = 3;
}
